--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <div class="col-12 col-md-6">
+        <div class="">
             <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="background-color:#fffbf0;">
                 <div class="container">
                   <a class="navbar-brand" href="#">
